Adding some functions and easy.min.js

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
         being executed in the console. Check it out!
       </h3>
     </center>
+    <br /><br /><br />
+
+    <h1>Examples:</h1>
+    <br />
+    <h2>Select:</h2>
+    <p id="selectDemo">Original innerHTML</p>
 
     <!--You can also use the minified version (easy.min.js)-->
     <script src="./js/easy.js"></script>
