Adding some more examples

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </p>
       <br />
       <h3>
-        See the README file for more details. Also, almost every example is
-        being executed in the console. Check it out!
+        See the README file for more details. Also, some examples are being
+        executed in the console. Check it out!
       </h3>
     </center>
     <br /><br /><br />
@@ -45,6 +45,14 @@
     <br />
     <h2>Select:</h2>
     <p id="selectDemo">Original innerHTML</p>
+    <br />
+    <h2>selectAll demo:</h2>
+    <h6>Original innerHTML</h6>
+    <h6>Original innerHTML</h6>
+    <h6>Original innerHTML</h6>
+    <h6>Original innerHTML</h6>
+    <h6>Original innerHTML</h6>
+    <h6>Original innerHTML</h6>
 
     <!--You can also use the minified version (easy.min.js)-->
     <script src="./js/easy.js"></script>
