Adding getInputValue and onClick example

--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
     <h6>Original innerHTML</h6>
     <h6>Original innerHTML</h6>
     <h6>Original innerHTML</h6>
+    <br />
+    <h2>getInputValue and onClick:</h2>
+    <div class="d-flex">
+      <input
+        type="text"
+        id="printText"
+        style="width: 500px"
+        class="form-control"
+        placeholder="Enter text to print (console log)"
+      />
+      <button id="printTextBtn" class="btn btn-primary">Print it</button>
+    </div>
+    <br /><br /><br />
 
     <!--You can also use the minified version (easy.min.js)-->
     <script src="./js/easy.js"></script>
