Adding onChange example

--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
       />
       <button id="printTextBtn" class="btn btn-primary">Print it</button>
     </div>
+    <br />
+    <h2>onChange:</h2>
+    <input
+      type="text"
+      id="onChangeText"
+      style="width: 500px"
+      class="form-control"
+      placeholder="Enter text to print (console log)"
+    />
     <br /><br /><br />
 
     <!--You can also use the minified version (easy.min.js)-->
