--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
       class="form-control"
       placeholder="Enter text to print (console log)"
     />
+    <br />
+    <h2>createElem, createTxtNode and addNode:</h2>
+    <div id="div1">
+      <p id="p1">This is a paragraph</p>
+      <p id="p2">This is another paragraph</p>
+    </div>
+    <br />
+    <h2>addNodeBefore:</h2>
+    <div id="div2">
+      <p id="p3">This is a paragraph</p>
+      <p id="p4">This is another paragraph</p>
+    </div>
     <br /><br /><br />
 
     <!--You can also use the minified version (easy.min.js)-->
