Adding one more function and its examples

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
       <p id="p3">This is a paragraph</p>
       <p id="p4">This is another paragraph</p>
     </div>
+    <br />
+    <h2>removeElem:</h2>
+    <p>The element below needs to be removed:</p>
+    <p id="removeElemDemo">removeElemDemo</p>
     <br /><br /><br />
 
     <!--You can also use the minified version (easy.min.js)-->
